--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,43 @@
+@import url("styles/header.css");
 
+@import url("styles/banner.css");
+
+@import url("styles/carrossel.css");
+
+@import url("styles/topicos.css");
+
+@import url("styles/contato.css");
+
+@import url("styles/rodapé.css");
+
+
+
+:root {
+
+    --cor-de-fundo: #0080FF;
+
+    --branco: #FFFFFF;
+
+    --laranja: #0080FF;
+
+    --azul-degrade: linear-gradient(97.54deg, #0080FF 35.49%, #0080FF 165.37%);
+
+    --fonte-principal: "Poppins";
+
+    --azul: #0080FF;
+
+}
+
+
+
+body {
+
+    background-color: var(--cor-de-fundo);
+
+    font-family: var(--fonte-principal);
+
+    font-size: 16px;
+
+    font-weight: 400;
+
+}
